--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
       "Developertugrul\\EntegraApi\\": "src/"
     }
   },
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "extra": {
     "laravel": {
       "providers": [
