--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
   "readme": "README.md",
   "require": {
     "php": ">=7.0",
-    "guzzlehttp/guzzle": "^6.3",
-    "developertugrul/entegra-api": "1.0.0"
+    "guzzlehttp/guzzle": "^6.3"
   },
   "version": "1.0.0",
   "type": "library"
