--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,6 @@
     "php": ">=7.0 || ^8.0",
     "guzzlehttp/guzzle": "^7.0"
   },
-  "version": "v1.0.1",
+  "version": "1.0.1.0",
   "type": "library"
 }
