--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
   "readme": "README.md",
   "require": {
     "php": ">=7.0 || ^8.0",
-    "guzzlehttp/guzzle": "^7.0"
+    "guzzlehttp/guzzle": "^7.0",
+    "vlucas/phpdotenv": "^5.6"
   },
   "version": "1.0.1.0",
   "type": "library"
