--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "name": "developertugrul/entegra-api",
   "description": "Entegra API",
+  "version": "1.0.3",
+  "type": "library",
   "license": "MIT",
   "keywords": [
     "entegra",
@@ -34,7 +36,5 @@
     "php": ">=7.0 || ^8.0",
     "guzzlehttp/guzzle": "^7.0",
     "vlucas/phpdotenv": "^5.6"
-  },
-  "version": "1.0.3",
-  "type": "library"
+  }
 }
