--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,6 @@
 {
   "name": "developertugrul/entegra-api",
   "description": "Entegra API",
-  "version": "1.0.3",
-  "type": "library",
   "license": "MIT",
   "keywords": [
     "entegra",
@@ -33,8 +31,11 @@
   },
   "readme": "README.md",
   "require": {
-    "php": ">=7.0 || ^8.0",
+    "php": "^8.0",
     "guzzlehttp/guzzle": "^7.0",
-    "vlucas/phpdotenv": "^5.6"
-  }
+    "vlucas/phpdotenv": "^5.6",
+    "ext-json": "*"
+  },
+  "version": "1.0.3",
+  "type": "library"
 }
