--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     {
       "name": "Tuğrul Yıldırım",
       "email": "iletisim@tugrulyildirim.com",
-      "homepage": "https://tugrulyildirim.com",
+      "homepage": "https://tugrulyildirim.com/open-source/entegra-api",
       "role": "Developer"
     }
   ],
