--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "name": "developertugrul/entegra-api",
   "description": "Entegra API",
+  "version": "1.0.7",
+  "type": "library",
   "license": "MIT",
   "keywords": [
     "entegra",
@@ -35,7 +37,5 @@
     "guzzlehttp/guzzle": "^7.0",
     "vlucas/phpdotenv": "^5.6",
     "ext-json": "*"
-  },
-  "version": "1.0.7",
-  "type": "library"
+  }
 }
